# edgerunner

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html
.github/workflows/: deploy.yml
src/: main.rs
